...
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_view_movie"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_behavior="@string/appbar_scrolling_view_behavior"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
...
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|bottom">

            <androidx.cardview.widget.CardView
                android:id="@+id/category"
                android:layout_width="180dp"
                android:layout_height="65dp"
                android:layout_margin="@dimen/component_extra"
                app:cardElevation="@dimen/component_medium"
                app:cardCornerRadius="35dp"
                android:longClickable="true"
...
